# Ray-Tracer

./: README.md
src/: CApp.cpp  CApp.h  CMakeLists.txt  SDL2-RT.vcxproj  SDL2-RT.vcxproj.filters  main.cpp
src/CM-RayTrace/: Makefile  camera.cpp  camera.hpp  gtfm.cpp  gtfm.hpp  image.cpp  image.hpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp
src/CM-RayTrace/CM-Lights/: lightbase.cpp  lightbase.hpp  pointlight.cpp  pointlight.hpp
src/CM-RayTrace/CM-Materials/: materialbase.cpp  materialbase.hpp  simplematerial.cpp  simplematerial.hpp
src/CM-RayTrace/CM-Primitives/: cone.cpp  cone.hpp  cylinder.cpp  cylinder.hpp  objectbase.cpp  objectbase.hpp  objplane.cpp  objplane.hpp  objsphere.cpp  objsphere.hpp
src/CM-RayTrace/CM-Textures/: checker.cpp  checker.hpp  flat.cpp  flat.hpp  texturebase.cpp  texturebase.hpp
